--- a/Tables.html
+++ b/Tables.html
@@ -8,8 +8,8 @@
     </tr>
     <tr>
       <th></th>
-      <th colspan="4">Average</th>  
-      <th colspan="4">Worst</th>                
+      <th colspan="4">Average Case</th>  
+      <th colspan="4">Worst Case</th>                
       <th>Worst</th>                
     </tr>
     <tr>
